Add scores
